Renamed organizations endpoints.
