# algonaut/api/v1/routes.py
@@ -16,14 +16,15 @@ from .resources.result import (
 )
 from .resources.dataset import Datasets, DatasetDetails
 from .resources.datapoint import Datapoints, DatapointDetails
-from .resources.organization_role import OrganizationRoles
+from .resources.organization import Organizations
 from .resources.model import CreateModel, AlgorithmModels, ModelDetails, DatasetModels
 from .resources.object_role import ObjectRoles, ObjectRoleDetails
 from .resources.dataschema import DataSchemas, DataSchemaDetails
 
 routes: List[Dict[str, Tuple[Type[Resource], Dict[str, Any]]]] = [
+    {"/organizations": (Organizations, {"methods": ["GET"]})},
+    {"/organizations/<organization_id>/projects": (Projects, {"methods": ["POST"]})},
     {"/projects": (Projects, {"methods": ["GET"]})},
-    {"/projects/<organization_id>": (Projects, {"methods": ["POST"]})},
     {
         "/projects/<object_id>": (
             ProjectDetails,
@@ -124,5 +125,4 @@ routes: List[Dict[str, Tuple[Type[Resource], Dict[str, Any]]]] = [
             {"methods": ["GET", "PATCH", "DELETE"]},
         )
     },
-    {"/organization_roles": (OrganizationRoles, {"methods": ["GET"]})},
 ]
